<resources>

    <string name="app_name">Sun Alarm</string>
    <string name="app_package">com.alimuzaffar.sunalarm</string>
    <string name="dawn">Dawn</string>
    <string name="s_dawn">Dawn %s</string>
    <string name="dawnAlarm">Dawn Alarm</string>
    <string name="delay_dawn_alarm">Delay dawn alarm\n(mins -before/+after):</string>
    <string name="dusk">Dusk</string>
    <string name="s_dusk">Dusk %s</string>
    <string name="duskAlarm">Dusk Alarm</string>
    <string name="delay_dusk_alarm">Delay dusk alarm\n(mins -before/+after):</string>
    <string name="time">Time</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_show_status">Today</string>
    <string name="int_0">0</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="ring_alarm">%s Alarm</string>
    <string name="alarm_auto_off">%s Alarm timed off</string>
    <string name="alarm_auto_off_description">Your alarm was automatically disabled after running for 5 minutes.</string>
    <string name="turn_off_alarm">Turn off alarm</string>
    <string name="alert_description">Click here to turn off the alarm.</string>
    <string name="settings">Settings</string>
    <string name="pref_sunZenithDawnDefault">108</string>
    <string name="pref_sunZenithDuskDefault">91</string>
    <string name="pref_dawnZenithTitle">Change sunrise calculation</string>
    <string name="pref_duskZenithTitle">Change sunset calculation</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="test_dawn">Test Dawn</string>
    <string name="test_dusk">Test Dusk</string>
    <string name="change_ringtone">Change ringtone</string>
    <string name="random_ringtone">Random ringtone</string>
    <string name="volume_text">Note: Use VOLUME UP and DOWN keys to set the alarm volume.</string>
    <string name="feedback">Feature request / Report Bug</string>
    <string name="menu_changeloc">Set location</string>
    <string name="clear_set_location">Clear set location</string>
	<string name="help">Help</string>
    <!-- Location -->
    <string name="not_support_gps">GPS location services is not supported.</string>
    <string name="not_support_network">Network location services is not supported.</string>
    
    <string name="places_api_key">HIDDEN</string>
    
    <string name="prayer_sehri">وَبِصَوْمِ غَدٍ نَّوَيْتَ مِنْ شَهْرِ رَمَضَانَ</string>
	<string name="prayer_sehri_en">Wa bi-sawmi ghadin nawaytu min shahri ramadan</string>
	<string name="prayer_sehri_translation">I intend to keep the fast for tomorrow in the month of Ramadan.</string>
	
	<string name="prayer_iftar">\u200F اِنِّى لَكَ صُمْتُ وَبِكَ امنْتُ وَ عَلى رِزْقِكَ اَفْطَرْتُ</string>
	<string name="prayer_iftar_en">Allahumma Inni laka sumtu wa bika amantu [wa alayka tawakkalto] wa ‘ala rizqika aftartu</string>
	<string name="prayer_iftar_translation">O Allah! I fasted for You and I believe in You and I break my fast with Your sustenance</string>

</resources>