<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >

    <ListPreference
        android:defaultValue="@string/pref_sunZenithDawnDefault"
        android:dialogTitle="@string/pref_dawnZenithTitle"
        android:entries="@array/pref_sunZenithEntries"
        android:entryValues="@array/pref_sunZenithValues"
        android:key="pref_dawnZenith"
        android:title="@string/pref_dawnZenithTitle" />

    <com.alimuzaffar.sunalarm.util.SeekBarPreference
        android:defaultValue="-18"
        android:key="pref_dawnZenith_other"
        android:max="25"
        android:summary="Lower earlier, higher later."
        android:title="Angle of the sun at dawn"
        robobunny:min="-25"
        robobunny:unitsLeft=""
        robobunny:unitsRight="deg" />

    <ListPreference
        android:defaultValue="@string/pref_sunZenithDuskDefault"
        android:dialogTitle="@string/pref_duskZenithTitle"
        android:entries="@array/pref_sunZenithEntries"
        android:entryValues="@array/pref_sunZenithValues"
        android:key="pref_duskZenith"
        android:title="@string/pref_duskZenithTitle" />

    <com.alimuzaffar.sunalarm.util.SeekBarPreference
        android:defaultValue="-1"
        android:key="pref_duskZenith_other"
        android:max="25"
        android:summary="Lower later, higher earlier."
        android:title="Angle of the sun at dusk"
        robobunny:min="-25"
        robobunny:unitsLeft=""
        robobunny:unitsRight="deg" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_random"
        android:summary="Randomly select an alarm."
        android:title="@string/random_ringtone" />

    <RingtonePreference
        android:key="pref_ringtone"
        android:ringtoneType="alarm"
        android:showDefault="true"
        android:showSilent="false"
        android:summary="Select a ringtone to play."
        android:title="@string/change_ringtone" />

</PreferenceScreen>