<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dawn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/dawn"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dawnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dusk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dusk"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/duskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/dawnAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dawnAlarm"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ToggleButton
                android:id="@+id/dawnAlarmSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/duskAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/duskAlarm"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ToggleButton
                android:id="@+id/duskAlarmSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/delay_dawn_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_dawn_alarm"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/delayDawnAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned"
                android:maxLength="4" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/delay_dusk_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_dusk_alarm"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/delayDuskAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="numberSigned"
                android:maxLength="4" />
        </TableRow>
    </TableLayout>

</ScrollView>